// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={true}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <div
    key="ou"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <Connect(OrgUnitDimension) />
  </div>
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="ou"
    />
  </Component>
</Component>
`;

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 2`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={true}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <div
    key="ou"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Connect(OrgUnitDimension) />
  </div>
  <Component>
    <Connect(HideButton) />
  </Component>
</Component>
`;

exports[`The DialogManager component renders OUDimension content with display:none when previously mounted 3`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={false}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <div
    key="ou"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Connect(OrgUnitDimension) />
  </div>
  <Connect(DataDimension) />
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="dx"
    />
  </Component>
</Component>
`;

exports[`The DialogManager component renders a closed dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={true}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <Component>
    <Connect(HideButton) />
  </Component>
</Component>
`;

exports[`The DialogManager component renders the DataDimension content in dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={false}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <Connect(DataDimension) />
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="dx"
    />
  </Component>
</Component>
`;

exports[`The DialogManager component renders the DynamicDimension content in dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={false}
  maxWidth="lg"
  onClose={[Function]}
  open={true}
>
  <Connect(DynamicDimension)
    dialogId="test"
  />
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="test"
    />
  </Component>
</Component>
`;

exports[`The DialogManager component renders the OrgUnitDimension content in dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={true}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <div
    key="ou"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <Connect(OrgUnitDimension) />
  </div>
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="ou"
    />
  </Component>
</Component>
`;

exports[`The DialogManager component renders the PeriodDimension content in dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={false}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <Connect(PeriodDimension) />
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="pe"
    />
  </Component>
</Component>
`;
